add .title class

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -36,7 +36,7 @@
 // $total-columns: 12;
 
 // We use these to control various global styles
-$body-bg: #f5f5f5 image-url('bg.png');
+$body-bg: #ECECEC;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
 // $body-font-weight: normal;
@@ -1195,6 +1195,8 @@ $topbar-link-bg-active: black;
 
 @import 'foundation';
 
+$title-bg-color: #F5F5F5;
+
 input.button {
   left: 40%;
 }
@@ -1218,6 +1220,21 @@ input.button {
   background-color: #333333;
 }
 
+
+// 标题
+.row.title {
+  background: $title-bg-color;
+  margin-bottom: 1rem;
+  border-bottom: solid 1px #EEE;
+}
+
+h3.title, h2.title {
+  margin-top: 0.2rem;
+  margin-bottom: 0.2rem;
+  color: #222;
+}
+
+// 导航信息
 .top-bar-section li.active:not(.has-form) a:not(.button) {
   background-color: black;
 }
