动态的样式处理

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1228,10 +1228,10 @@ input.button {
   border-bottom: solid 1px #EEE;
 }
 
-h3.title, h2.title {
+h4.title, h3.title, h2.title {
   margin-top: 0.2rem;
   margin-bottom: 0.2rem;
-  color: #222;
+  color: #7D7D7D;
 }
 
 // 导航信息
