完善页面内容

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -31,6 +31,10 @@ p.address, p.industry {
   padding: 1rem 0 0;
 }
 
+.description {
+  margin-bottom: 0;
+}
+
 // 我的项目
 .project_list {
   background-color: #fafafa;
