发布项目功能实现

--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -74,3 +74,8 @@ p.address, p.industry {
 #logo_image_field {
   margin-bottom: 1rem;
 }
+
+.publish_box {
+  margin-top: 1rem;
+  margin-bottom: -2.3rem;
+}
