--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -1,4 +1,5 @@
 - content_for(:container) do
+  = render partial: "publish_header", locals: { project: @project }
   div.row
     div.large-8.columns
       div.row
@@ -64,9 +65,12 @@
             div.large-12.columns
               h3.title 完整度
           div.progress
-            span.meter style="width: 50%" 
+            span.meter style="width: #{ @project.complete_degree * 100 }%" 
           hr
-          button 发布
+          - unless @project.published
+            button.expand#publish data-uri=publish_project_path(@project.id) 发布
+          - else
+            button.expand.disabled#published 已发布
       div.row
         div.large-12.columns.container
           div.row.title
