初步的融资功能

--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -95,7 +95,7 @@
               h3.title 招人需求
           div.row
             div.large-12.columns
-              a.expand.button data-reveal-id="invite-modal" data-uri=invest_project_path(@project.id) 发起招聘
+              a.expand.button data-reveal-id="invite-modal" 发起招聘
           div.reveal-modal.medium#invite-modal data-reveal="" 
             h4 发起新的招聘
             hr
