--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -83,9 +83,18 @@ div.row.invest
         div.invest_stats
           p 融资进度: 50% / $100,000,000 ( $50,000,000 ) / 30天 ( 剩余 15 天 )
         div.progress
-          span.meter style="width: 50%"
+          span.meter style="width: #{@project.complete_degree * 100}%"
         div.large-2.columns.large-centered
-          a.button 投资
+          a.button data-reveal-id="add-investment-modal" 投资
+        div.reveal-modal.medium#add-investment-modal data-reveal="" 
+          h4 项目投资
+          hr
+          = simple_form_for(Investment.new(money_require_id: 1), url: syndicates_path) do |f|
+            = f.hidden_field :money_require_id
+            = f.input :money
+            = f.button :submit, "提交"
+          a.close-reveal-modal &#215;
+
       hr
 
     div.row.jobs
