--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -79,3 +79,8 @@ p.address, p.industry {
   margin-top: 1rem;
   margin-bottom: -2.3rem;
 }
+
+//融资需求 deadline 控制
+.money_require_deadline select {
+  width: auto;
+}
