去掉对中文的依赖, 全部改为 i18n 翻译的方式

--- a/app/views/members/_member.html.slim
+++ b/app/views/members/_member.html.slim
@@ -6,6 +6,6 @@ li
     div.large-6.columns
       = link_to user_path(member.user) do
         h4 #{member.user.name}
-      p #{member.role}
+      p #{t('member.roles.' + member.role)}
       p #{member.title}
       p #{member.description}
