--- a/app/views/members/new.html.slim
+++ b/app/views/members/new.html.slim
@@ -3,7 +3,7 @@
   = f.simple_fields_for :user, User.new do |p|
     = p.input :name
     = p.input :email, wrapper_html: { class: 'hide' }, required: true
-  = f.input :role, collection: Member::ROLES
+  = f.input :role, collection: Member::ROLES.collect { |m| [ t('member.roles.' + m), m ] }
 
   div.large-3.large-offset-3.columns.add_member_div data-uri=project_members_path(@project)
     = f.button :submit, '提交', class: 'tiny add_member_button'
