--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -54,10 +54,7 @@
             div.large-12.columns
               h4 当前投资进度
               - if money_require = @project.opened_money_require
-                  div.invest_stats
-                    p #{progress_p(money_require)}
-                  div.progress
-                    span.meter style="width: #{money_require.progress * 100}%"
+                  = render partial: "syndicates/syndicate_progress", locals: { money_require: money_require} 
                   div.row
                     div.large-4.columns.large-centered
                       button#close_investment data-uri=close_investment_project_path(money_require.id) 关闭本次融资
@@ -69,10 +66,7 @@
               h4 历史投资情况
               - unless (money_requires = @project.history_money_requires).empty?
                 - money_requires.each do |money_require|
-                  div.invest_stats
-                    p #{progress_p(money_require)}
-                  div.progress
-                    span.meter style="width: #{money_require.progress * 100}%"
+                  = render partial: "syndicates/syndicate_progress", locals: { money_require: money_require} 
                   hr
               - else
                 | No Content
