--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,6 +11,7 @@
  *= require_self
  //= require foundation_and_overrides
  //= require jquery-ui-1.10.4.custom
+ //= require jquery.pnotify.default
  *= require_tree .
  */
 
