修改已经投资和无投资权限时的button

--- a/app/views/projects/show.html.slim
+++ b/app/views/projects/show.html.slim
@@ -82,8 +82,20 @@ div.row.invest
       div.row.invest
         div.large-12.columns
           = render partial: 'syndicates/syndicate_progress', locals: { money_require: money_require }
-          div.large-2.columns.large-centered
-            a.button data-reveal-id="add-syndicate-modal" 投资
+          div.large-3.columns.large-centered
+            - if current_user
+              - if current_user.investor
+                - if money_require.has_invested?(current_user)
+                  a.button.disabled href="javascript:void(0)" 你已经投资过
+                - else
+                  a.button data-reveal-id="add-syndicate-modal" 投资
+              / 未认证
+              - else
+                a.button.disabled href="javascript:void(0)" 只有认证投资人可投资
+              / 未登录
+            - else
+              a.button.disabled href="javascript:void(0)" 登录后可投资
+
           div.reveal-modal.medium#add-syndicate-modal data-reveal="" 
             h4 项目投资
             hr
@@ -98,7 +110,7 @@ div.row.invest
       div.large-12.columns
         div.job 
           h3 工作招聘
-        div.large-2.columns.large-centered
+        div.large-3.columns.large-centered
           a.button 我感兴趣
 
     hr
