--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -113,3 +113,7 @@
           div.row.title
             div.large-12.columns
               h3.title 关注人员
+          div.row.star_users
+            div.large-12.columns
+              ul.small-block-grid-3
+                = render partial: "stars/star", collection: @project.star_users, as: :star_user
