合入后台模板

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -51,7 +51,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
               = link_to 'Edit account', edit_user_registration_path
             - if current_user.has_role? :admin
               li
-                = link_to '后台管理', users_path
+                = link_to '后台管理', admin_root_path
             li
               div.divtar
             li
