--- a/app/views/layouts/admin/_navigation.html.slim
+++ b/app/views/layouts/admin/_navigation.html.slim
@@ -10,9 +10,9 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
       li
         = link_to "项目管理", admin_projects_path
       li
-        = link_to "投资人申批", admin_users_path
+        = link_to "投资人申批", admin_investors_path
       li
-        = link_to "领投人申批", admin_users_path
+        = link_to "领投人申批", admin_leaders_path
     ul.right
       li.divider
       li
