--- a/app/views/common/_input_preview.html.slim
+++ b/app/views/common/_input_preview.html.slim
@@ -1,5 +1,6 @@
 / locals: { model, column_name, simple_form }
-= f.input column_name do
+- options = {} unless defined?(options)
+= f.input column_name, options do
   div.row#logo_image_field
     - if model.send("#{column_name}?")
       div.large-2.columns
