修正 options 引发的页面访问不了的问题, 属于临时处理

--- a/app/views/common/_input_preview.html.slim
+++ b/app/views/common/_input_preview.html.slim
@@ -1,5 +1,5 @@
-/ locals: { model, column_name, simple_form }
-- options = {} unless defined?(options)
+/ locals: { model, column_name, simple_form, options = {} }
+- options = {} if options.blank?
 = f.input column_name, options do
   div.row#logo_image_field
     - if model.send("#{column_name}?")
