增加领投的前端支持

--- a/app/views/projects/edit.html.slim
+++ b/app/views/projects/edit.html.slim
@@ -78,7 +78,7 @@
               h3.title 投资需求
           div.row
             div.large-12.columns
-              a.expand.button data-reveal-id="invest-modal" 发起融资
+              a.expand.button data-reveal-id="invest-modal" 发起融资预热
           div.reveal-modal.medium#invest-modal data-reveal="" 
             h4 发起新的融资
             hr
