--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -22,18 +22,11 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
             div.small-4.columns
               a.button href="#" Search
 
-      li.divider
       - if user_signed_in?
-        li.has-dropdown
-          - if current_user.mailbox.inbox.length > 0
-            = link_to "Messages: " + current_user.mailbox.inbox(:unread => true).count(:id, :distinct => true).to_s, "#"
-            /= link_to "Messages: " + current_user.mailbox.inbox.count.to_s
-          - else
-            = link_to "Messages", "#"
-          ul.dropdown
-            li = link_to "View: " + current_user.mailbox.inbox.length.to_s, conversations_path
-            /current_user.mailbox.inbox.first
-            li = link_to "Send to...", :new_conversation
+        li
+          = link_to conversations_path do
+            span.messagebox
+              = current_user.mailbox.inbox(:unread => true).count(:id, :distinct => true).to_s
         li.has-dropdown
           - if current_user.name and current_user.authentications.length > 0
             a =current_user.name + "[#{current_user.authentications.first.provider}]"
