通知机制调为右下角,微调相关参数

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,3 +32,11 @@ div.footer {
 table {
   width: 100%
 }
+
+.ui-pnotify.stack-bottomright {
+  right: auto;
+  top: auto;
+  left: auto;
+  bottom: auto;
+}
+
