--- a/app/views/projects/stage2.html.slim
+++ b/app/views/projects/stage2.html.slim
@@ -18,4 +18,6 @@ h1 创业需求
     = p.input :stock
     = p.input :option
     = p.input :description
-  = f.button :submit, "完成"
+  div.control-options
+    = link_to '上一步', stage1_project_path(@project), class: 'button cancel left'
+    = f.button :submit, "确认完成", class: 'left'
