settingslogic添加, 方便配置

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -2,7 +2,7 @@ nav.top-bar(data-options="is_hover:false" data-topbar)
   ul.title-area
     li.name
       h1 
-        = link_to '创业赢 CYwin', root_path
+        = link_to Setting.site_name, root_path
   div.top-bar-section
     ul.left
       li class="#{cal_navbar_active(params[:controller], :projects)}"
