--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,6 +3,7 @@ html
   head
     meta charset="utf-8"
     meta name="viewport" content="width=device-width, initial-scale=1.0" 
+    meta property="wb:webmaster" content="558874198d91f969"
     title= content_for?(:title) ? yield(:title) : 'CYwin'
     meta name="description" content=("#{content_for?(:description) ? yield(:description) : 'CYwin'}") 
     = stylesheet_link_tag "application", media: "all"
