新的导航条

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,2 +1,10 @@
 - content_for(:title) do
   | 首页
+
+h1 hello world
+h1 hello world
+h1 hello world
+h1 hello world
+h1 hello world
+h1 hello world
+
