--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,14 +13,10 @@ html
     = javascript_include_tag "application"
     = csrf_meta_tags
   body
-    header
-      = render 'layouts/navigation'
-    main role="main" 
-      = render 'layouts/messages'
-      - if content_for?(:container)
-        = yield(:container)
-      - else
-        div.row.container
-          div.large-12.columns
-            = yield
-    = render 'layouts/foot'
+    .off-canvas-wrap
+      .inner-wrap
+        = render 'layouts/navigation'
+        section.main-section ng-app="app"
+          = yield
+          = render 'layouts/foot'
+        a.exit-off-canvas
