--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -12,3 +12,21 @@ aslide.left-off-canvas-menu
       = link_to root_path do
         i.fi-home
         | 首页
+    li
+      = link_to root_path do
+        i.fi-heart
+        | 精品
+    li
+      = link_to root_path do
+        i.fi-thumbnails
+        | 分类
+    li
+      label Find
+    li
+      = link_to root_path do
+        i.fi-eye
+        | 探索
+    li
+      = link_to root_path do
+        i.fi-torsos-all
+        | 投资人
