--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,10 +1,61 @@
 - content_for(:title) do
   | 首页
 
-h1 hello world
-h1 hello world
-h1 hello world
-h1 hello world
-h1 hello world
-h1 hello world
+.start-content
+  .row
+    .small-12.large-10.large-centered.columns
+      form
+        .row
+          .small-12.large-6.columns
+            h1.heading 创业, 找钱, 找人, 更容易, 更简单
+            p.sub-heading 投资人, 小伙伴, 都在等着你的创业项目. 想要像互联网式的创业融资与招人服务? 马上注册.
 
+          .small-12.large-6.columns
+            = text_field_tag 'username', nil, placeholder: '你的真实姓名', 'ng-model'=> 'username'
+            = text_field_tag 'email', nil, placeholder: '你的邮箱', 'ng-model'=> 'email'
+            = text_field_tag 'password', nil, placeholder:  '输入一个密码', 'ng-model'=> 'password'
+            button 注册
+
+.refine-projects-content
+  .row
+    .small-12.large-10.large-centered.columns
+      h1 精品创业项目
+      .project
+        = link_to "#" do
+          - image_tag 'j/jingpin1.jpg'
+        p.summary
+          span 露薇
+          |  - 
+          span 职业女性纤体午晚餐速递及基于商圈的纯女性社交APP
+        p.info
+          span 约谈: 3
+          span 投资: 5
+          span 讨论: 10
+        p
+          = link_to '了解更多...', "#"
+      .project
+        = link_to "#" do
+          - image_tag 'j/jingpin2.jpg'
+        p
+          span 露薇
+          |  - 
+          span 职业女性纤体午晚餐速递及基于商圈的纯女性社交APP
+        p
+          span 约谈: 3
+          span 投资: 5
+          span 讨论: 10
+        p
+          = link_to '了解更多...', "#"
+      .project
+        = link_to "#" do
+          - image_tag 'j/jingpin3.jpg'
+        p
+          span 露薇
+          |  - 
+          span 职业女性纤体午晚餐速递及基于商圈的纯女性社交APP
+        p
+          span 约谈: 3
+          span 投资: 5
+          span 讨论: 10
+        p
+          = link_to '了解更多...', "#"
