添加精品页面

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -13,7 +13,7 @@ aslide.left-off-canvas-menu
         i.fi-home
         | 首页
     li
-      = link_to root_path do
+      = link_to refine_index_path do
         i.fi-heart
         | 精品
     li
