添加注册页面

--- a/app/assets/stylesheets/heads.css.scss
+++ b/app/assets/stylesheets/heads.css.scss
@@ -4,6 +4,12 @@
   a {
     color: #F7F7F7;
   }
+
+  .top-right {
+    margin-right: 0.5rem;
+    font-weight: 400;
+    font-size: 1rem;
+  }
 }
 
 .off-canvas-list {
