--- a/app/views/home/welcome.html.slim
+++ b/app/views/home/welcome.html.slim
@@ -2,5 +2,16 @@
   .row
     .small-12.large-10.columns
       h1 下一步你可以:
-      = link_to '浏览项目', root_path
-      = link_to '申请认证投资人', root_path
+      .actions
+        .row
+          .small-12.large-6.columns
+            .action
+              = link_to '浏览项目', root_path
+          .small-12.large-6.columns
+            .action
+              = link_to '申请认证投资人', root_path
+
+      .refine-projects-content
+        .row
+          .small-12.large-10.large-centered.columns
+            = render 'refine/refine_project'
