--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -19,7 +19,7 @@ aslide.left-off-canvas-menu
         i.fi-heart
         | 精品
     li
-      = link_to root_path do
+      = link_to categories_path do
         i.fi-thumbnails
         | 分类
     li
