微调欢迎页手机上的显示

--- a/app/assets/stylesheets/welcome.css.scss
+++ b/app/assets/stylesheets/welcome.css.scss
@@ -12,6 +12,7 @@
     margin-bottom: 2rem;
     border-bottom: 1px solid #ddd;
     .action {
+      margin-bottom: 1rem;
       padding: 2rem 0;
       display: inline-block;
       border: 1px solid #ddd;
