增加分类页面, 并重构top-blank

--- a/app/views/home/index.html.slim
+++ b/app/views/home/index.html.slim
@@ -1,7 +1,7 @@
 - content_for(:title) do
   | 首页
 
-.start-content
+.start-content.top-blank
   .row
     .small-12.large-10.large-centered.columns
       form
