--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -1,2 +1,6 @@
-h1 Categories#index
-p Find me in app/views/categories/index.html.slim
+- content_for(:title) do
+  | 分类
+.categories.top-blank
+  .row
+    .small-12.large-10.columns
+      = render 'category'
