--- a/app/views/refine/index.html.slim
+++ b/app/views/refine/index.html.slim
@@ -1,8 +1,8 @@
 .refine
-  .refine-advertise
+  .refine-advertise.top-blank
     .row
       .small-12.large-10.large-centered.columns
-        h1 精调细选好项目
+        h1 精挑细选好项目
         p 这里是信息全面, 平台评价最高的好项目
   .refine-projects-content
     .row
