增加探索与所有项目页面

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -25,7 +25,7 @@ aslide.left-off-canvas-menu
     li
       label Find
     li
-      = link_to root_path do
+      = link_to explore_index_path do
         i.fi-eye
         | 探索
     li
