发现的首页

--- a/app/views/explore/index.html.slim
+++ b/app/views/explore/index.html.slim
@@ -1,2 +1,20 @@
-h1 Explore#index
-p Find me in app/views/explore/index.html.slim
+.explore.top-blank
+  .row
+    .small-12.columns
+      .explore-head
+        h1 发现你的好项目
+        .row
+          .list
+            .small-3.large-3.columns
+              a.active href="#" 广场
+          .list
+            .small-3.large-3.columns
+              a href="#" 分类
+          .list
+            .small-3.large-3.columns
+              a href="#" 趋势
+          .list
+            .small-3.large-3.columns
+              a href="#" 所有
+      / 内容
+      h1 广场主要内容
