添加投资人与找工作联结, 微调注册页面

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -29,6 +29,10 @@ aslide.left-off-canvas-menu
         i.fi-eye
         | 探索
     li
-      = link_to root_path do
+      = link_to investors_path do
         i.fi-torsos-all
         | 投资人
+    li
+      = link_to jobs_path do
+        i.fi-address-book
+        | 找工作
